feat: set `aria-live` to `assertive`
This announces error messages on focus out.

--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -14,7 +14,7 @@
           </label>
         </div>
         <div class="form-row">
-          <div class="col invalid-message-highlight">
+          <div class="col invalid-message-highlight" aria-live="assertive">
             <input
               aria-hidden="true"
               autocomplete="off"
