--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -132,7 +132,7 @@
                       [formGroup]="formHelper.getParticipantForm()"
                       class="poll-add-user-row">
                     <td class="p-2 poll-data-cell name">
-                      <div class="row g-0 invalid-message-highlight">
+                      <div class="row g-0 invalid-message-highlight" aria-live="assertive">
                         <!-- name -->
                         <div
                           [ngClass]="{'has-error': formHelper.getParticipantFormName().invalid
@@ -262,7 +262,7 @@
                     @if (formHelper.isEditInParticipantForm(participant.participantId)) {
                       <td (keydown.enter)="$event.preventDefault()"
                           [formGroup]="formHelper.getParticipantForm()" class="p-2 poll-data-cell name">
-                        <div class="row g-0 invalid-message-highlight">
+                        <div class="row g-0 invalid-message-highlight" aria-live="assertive">
                           <!-- name input -->
                           <div
                             [ngClass]="{'has-error': formHelper.getParticipantFormName().invalid  &&
