--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
           <label class="col" data-id="createPollLabel" for="title">{{ 'poll.title.set' | translate }}</label>
         </div>
         <div class="form-row mb-2">
-          <div class="col invalid-message-highlight">
+          <div class="col invalid-message-highlight" aria-live="assertive">
             <input
               required
               class="form-control"
