--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -1,5 +1,8 @@
-<div class="row g-0 justify-content-center text-center suggested-date-container" aria-labelledby="full-date">
-  <span id="full-date" class="visually-hidden">
+<div
+  class="row g-0 justify-content-center text-center suggested-date-container"
+  [attr.aria-labelledby]="'full-date-' + date.suggestedDateId"
+>
+  <span id="full-date-{{ date.suggestedDateId }}" class="visually-hidden">
     @if (!date.endDate && !date.endTime) {
       {{ date.startDate | date:'EEEE dd. MMMM YYYY': '': getLocale() }}
     } @else if (date.startTime && !date.endDate && date.endTime) {
