--- a/src/app/shared/components/suggested-date/suggested-date.component.scss
+++ b/src/app/shared/components/suggested-date/suggested-date.component.scss
@@ -22,6 +22,16 @@ div {
 
 .hyphen {
   font-size: 25px;
+
+  // desktop
+  &.position-absolute.d-lg-block {
+    bottom: 0.375rem;
+  }
+
+  // mobile
+  &.position-absolute.d-lg-none {
+    bottom: 1rem;
+  }
 }
 
 .suggested-date-container .column {
