fix: missing col in tfoot & border width

--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -25,7 +25,7 @@ thead tr:first-child th {
   border-top: 0 !important;
 }
 
-tbody tr:last-child td {
+tfoot tr:last-child td {
   border-bottom: 0 !important;
 }
 
