fix: dates sometimes being doubled for screenreaders

--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -91,7 +91,7 @@
             <td class="suggested-date pl-3">
               <div class="row g-0">
                 <div class="col-9">
-                  <app-suggested-date [date]="date"></app-suggested-date>
+                  <app-suggested-date [date]="date" [index]="i"></app-suggested-date>
                 </div>
                 <div class="col-3 d-flex justify-content-center align-items-center">
                 <button
