fix: missing start time for screenreader

--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -5,6 +5,7 @@
   <span id="full-date-{{ index }}" class="visually-hidden">
     @if (!date.endDate && !date.endTime) {
       {{ date.startDate | date:'EEEE dd. MMMM YYYY': '': getLocale() }}
+      {{ date.startTime | date:'HH:mm': '': getLocale() }}
     } @else if (date.startTime && !date.endDate && date.endTime) {
       {{ date.startDate | date:'EEEE dd. MMMM YYYY': '': getLocale() }}
       {{ 'date.from' | translate }}
