--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -52,7 +52,7 @@
   <!-- column on the right for start and end time - only on mobile resolutions -->
   @if (date.startTime && !date.endDate) {
     <div class="col-auto align-self-center d-lg-none" aria-hidden="true">
-      <div class="ml-1 mr-2 d-inline-block date-time-divider"></div>
+      <div class="ms-1 me-2 date-time-divider"></div>
     </div>
     <div class="col d-flex d-lg-none column" aria-hidden="true">
       <div class="row g-0 align-self-center w-100">
