refactor: add border to mobile table

--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -7,7 +7,7 @@
 .poll-table.mobile td {
   vertical-align: middle;
   padding: 0;
-  border: unset;
+  border-width: 1px 0 0 !important;
 }
 
 .btn.btn-transparent {
