fix: hyphen position

--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -52,7 +52,7 @@
     <div class="col-auto align-self-center d-lg-none" aria-hidden="true">
       <div class="ms-1 me-2 date-time-divider"></div>
     </div>
-    <div class="col d-flex d-lg-none column" aria-hidden="true">
+    <div class="col d-flex d-lg-none column position-relative" aria-hidden="true">
       <div class="row g-0 align-self-center w-100">
         <div class="col">
           <div>{{ date.startTime | date:'HH:mm': '': getLocale() }}</div>
