chore: rebase cleanup
- edit button centered
- hyphen smaller

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -209,7 +209,7 @@
                           <span class="text-bold">{{ participant.name }}</span>
                         </div>
                       </th>
-                      <td class="h-100">
+                      <td class="td-full-height">
                           <!-- button to edit the participant -->
                           @if (!formHelper.hasAddParticipantForm() && !formHelper.hasEditParticipantForm() && !isAppointmentPaused) {
                             <div class="d-flex h-100 align-items-center justify-content-center">
