test: make data-id unique

--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -155,7 +155,7 @@
             <button
               (click)="formHelper.downloadCsv()"
               class="download-csv btn btn-rounded btn-sm btn-light"
-              data-id="downloadCsvButton"
+              data-id="downloadCsvButtonMobile"
               data-placement="top"
               data-toggle="tooltip"
               id="download-csv"
