Revert "feat: set `aria-live` to `assertive`"
This reverts commit 0d2f890057d56a6789fa78e7abc3864f9a2a4289.

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -26,7 +26,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/title.svg">
             </div>
-            <div class="col invalid-message-highlight" aria-live="assertive">
+            <div class="col invalid-message-highlight">
               <label data-id="titleLabel" for="title">{{ 'poll.title.placeholder' | translate }}</label>
               <input
                 required
@@ -76,7 +76,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/user.svg">
             </div>
-            <div class="col invalid-message-highlight" aria-live="assertive">
+            <div class="col invalid-message-highlight">
               <label data-id="nameLabel" for="name">{{ 'poll.details.name.yourName' | translate }}</label>
               <input
                 required
@@ -128,7 +128,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Ort" class="icon m-2 mt-3 mt-lg-4" src="assets/location.svg">
             </div>
-            <div class="col invalid-message-highlight" aria-live="assertive">
+            <div class="col invalid-message-highlight">
               <label data-id="locationLabel" for="location">{{ 'poll.details.place.placeOptional' | translate }}</label>
               <input
                 class="form-control"
@@ -168,7 +168,7 @@
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Sprechblase" class="icon m-2 mt-3 mt-lg-4" src="assets/description.svg">
             </div>
-            <div class="col invalid-message-highlight" aria-live="assertive">
+            <div class="col invalid-message-highlight">
               <label
                 data-id="descriptionLabel"
                 for="description"
