--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -37,7 +37,7 @@
               </label>
             </div>
           </div>
-          <div class="row g-0 invalid-message-highlight" aria-live="assertive">
+          <div class="row g-0 invalid-message-highlight">
             <div class="col-1 d-flex justify-content-end align-items-center">
               <img alt="key" class="icon m-2" src="assets/password.svg">
             </div>
@@ -85,7 +85,7 @@
               </label>
             </div>
           </div>
-          <div class="row g-0 invalid-message-highlight" aria-live="assertive">
+          <div class="row g-0 invalid-message-highlight">
             <div class="col-1 d-flex justify-content-end align-items-center">
               <img alt="key" class="icon m-2" src="assets/password.svg">
             </div>
