fix: disable unsupported feature until backend is ready

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -517,6 +517,8 @@
             }
           </div>
         }
+        <!-- TODO disabled until backend supports feature -->
+        @if (false) {
         <div class="my-2 divider-single"></div>
         <!-- description (optional) for this date entry -->
         <div class="row">
@@ -552,6 +554,7 @@
             }
           </div>
         </div>
+        }
         <!-- error messages for this date entry -->
         @if (getSuggestedDatesForm(i).dirty && !!getSuggestedDatesForm(i).errors) {
           <div class="row mb-2">
