--- a/src/app/links/links.component.scss
+++ b/src/app/links/links.component.scss
@@ -46,7 +46,7 @@ $icon-height: 30px;
   border-color: $medium-gray;
 }
 
-button.btn-with-image {
+a.link-with-image {
   display: flex;
   color: $primary;
   padding-left: 6px;
