refactor: cleanup style

--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -4,8 +4,7 @@
   </div>
   <div
     #combobox
-    id="combo-input"
-    class="combo-input"
+    class="combobox"
     role="combobox"
     (click)="toggleMenuState(false)"
     (blur)="onBlur($event)"
