feat: add label to ComboboxOption
The label gets displayed in the opened select instead of the value. When
 no label is specified, the value is used.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@
             [label]="'lang.languageSelect' | translate"
             [callback]="changeLanguage.bind(this)"
             [options]="[
-              {value: 'DE', callbackArgs: 'de-DE'},
-              {value: 'EN', callbackArgs: 'en-EN'},
+              {value: 'DE', label: 'Deutsch', callbackArgs: 'de-DE'},
+              {value: 'EN', label: 'English', callbackArgs: 'en-EN'}
             ]"
             [defaultOptionIndex]="localeService.getLocale().languageCode === 'de-DE' ? 0 : 1"
           />
