--- a/src/app/shared/components/combobox/combobox.component.html
+++ b/src/app/shared/components/combobox/combobox.component.html
@@ -14,6 +14,7 @@
     aria-controls="listbox"
     aria-haspopup="listbox"
     aria-labelledby="combo-label"
+    [attr.data-id]="dataId"
     tabindex="0"
   >
     {{ this.options[activeIndex].value }}
@@ -36,6 +37,7 @@
         [ngClass]="{'option-current': i === activeIndex}"
         (click)="selectOption(i)"
         [attr.aria-selected]="i === activeIndex"
+        [attr.data-id]="option.dataId"
       >
         {{ option.label ? option.label : option.value }}
       </div>
