refactor: set role & aria-atomic
role="alert" implies an aria-live attribute and sets aria-atomic to
true, which is unwanted for our case. The latter settings is explicitly
reverted to default.

This results in less repeated outputs than aria-live="assertive".

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -42,6 +42,8 @@
                   class="invalid-message"
                   data-id="msgRequiredTitle"
                   id="required-title"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.noTitle' | translate }}
@@ -52,6 +54,8 @@
                   class="invalid-message"
                   data-id="msgInvalidTitle"
                   id="invalid-title"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.invalid' | translate }}
@@ -62,6 +66,8 @@
                   class="invalid-message"
                   data-id="msgLongTitle"
                   id="maxLength-title"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.title.tooLong' | translate }}
@@ -94,6 +100,8 @@
                   class="invalid-message"
                   data-id="msgRequiredName"
                   id="required-name"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.noName' | translate }}
@@ -104,6 +112,8 @@
                   class="invalid-message"
                   data-id="msgInvalidName"
                   id="invalid-name"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.invalid' | translate }}
@@ -114,6 +124,8 @@
                   class="invalid-message"
                   data-id="msgLongName"
                   id="long-name"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.name.tooLong' | translate }}
@@ -144,6 +156,8 @@
                   class="invalid-message"
                   data-id="msgInvalidLocation"
                   id="invalid-location"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.place.invalid' | translate }}
@@ -154,6 +168,8 @@
                   class="invalid-message"
                   data-id="msgLongLocation"
                   id="maxLength-location"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.place.tooLong' | translate }}
@@ -190,6 +206,8 @@
                   class="invalid-message"
                   data-id="msgLongDescription"
                   id="maxLength-description"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'poll.details.description.tooLong' | translate }}
