--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,6 +40,8 @@
                 class="invalid-message"
                 data-id="msgRequiredTitle"
                 id="required-title"
+                role="alert"
+                aria-atomic="false"
               >
                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.noTitle' | translate }}
@@ -50,6 +52,8 @@
                 class="invalid-message"
                 data-id="msgInvalidTitle"
                 id="invalid-title"
+                role="alert"
+                aria-atomic="false"
               >
                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.invalid' | translate }}
@@ -60,6 +64,8 @@
                 class="invalid-message"
                 data-id="msgLongTitle"
                 id="long-title"
+                role="alert"
+                aria-atomic="false"
               >
                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'poll.title.tooLong' | translate }}
