--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -44,6 +44,8 @@
                 class="invalid-message"
                 data-id="msgInvalid"
                 id="invalid"
+                role="alert"
+                aria-atomic="false"
               >
                 <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                 {{ 'password.invalid' | translate }}
