--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -58,6 +58,8 @@
                   class="offset-1 col invalid-message"
                   data-id="errorMsgSetPassword"
                   id="set-password"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'password.set' | translate }}
@@ -68,6 +70,8 @@
                   class="offset-1 col invalid-message"
                   data-id="errorMsgSetMinimum"
                   id="set-minimum"
+                  role="alert"
+                  aria-atomic="false"
                 >
                   <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                   {{ 'password.setMinimum' | translate }}
@@ -110,6 +114,8 @@
                     class="offset-1 col invalid-message"
                     data-id="errorMsgSetPassword"
                     id="set-password-repeat"
+                    role="alert"
+                    aria-atomic="false"
                   >
                     <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                     {{ 'password.set' | translate }}
@@ -120,6 +126,8 @@
                       class="offset-1 col invalid-message"
                       data-id="errorMsgNoMatch"
                       id="no-match"
+                      role="alert"
+                      aria-atomic="false"
                     >
                       <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                       {{ 'password.noMatch' | translate }}
@@ -130,6 +138,8 @@
                       class="offset-1 col invalid-message"
                       data-id="errorMsgSetMinimum"
                       id="set-minimum-repeat"
+                      role="alert"
+                      aria-atomic="false"
                     >
                       <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
                       {{ 'password.setMinimum' | translate }}
