--- a/src/app/shared/components/tos/tos.component.html
+++ b/src/app/shared/components/tos/tos.component.html
@@ -11,7 +11,7 @@
     </ng-template>
 
     @if (isTosRead.dirty && isTosRead.invalid) {
-      <div class="col-12 invalid-message" id="tos-accept">
+      <div class="col-12 invalid-message" id="tos-accept" role="alert" aria-atomic="false">
         <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
         {{ 'tos.accept' | translate }}
       </div>
